[*] java 17 support