@@ -79,8 +79,16 @@ configure(leafProjects) {
     compileJava.options.compilerArgs += '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED'
     compileJava.options.compilerArgs += '--add-exports=java.desktop/sun.swing=ALL-UNNAMED'
     compileJava.options.compilerArgs += '--add-exports=java.desktop/com.sun.java.swing.plaf.windows=ALL-UNNAMED'
+
+    compileJava.options.compilerArgs += '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED'
+    compileJava.options.compilerArgs += '--add-opens=java.base/java.io=ALL-UNNAMED'
+    compileJava.options.compilerArgs += '--add-opens=java.base/java.lang=ALL-UNNAMED'
+    compileJava.options.compilerArgs += '--add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED'
+
     compileTestJava.options.compilerArgs += '--add-exports=java.base/sun.nio.ch=ALL-UNNAMED'
     compileTestJava.options.compilerArgs += '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED'
+    compileTestJava.options.compilerArgs += '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED'
+
     sourceCompatibility = 11
     targetCompatibility = 11
 
@@ -92,7 +100,6 @@ configure(leafProjects) {
 
         // same api defined in javax.annotation-api-*
         exclude group: 'jakarta.annotation', module: 'jakarta.annotation-api' // GNU license
-
     }
 
     spotbugsMain {
@@ -118,7 +125,7 @@ configure(leafProjects) {
     dependencyManagement {
         dependencies {
 
-            dependencySet(group: 'com.epam.deltix', version: '3.0.1') {
+            dependencySet(group: 'com.epam.deltix', version: '3.0.3') {
                 entry 'gflog-api'
                 entry 'gflog-core'
                 entry 'gflog-jul'
@@ -135,12 +142,12 @@ configure(leafProjects) {
 //            dependency 'com.epam.deltix:gflog-mail:3.0.1'
 
             dependency 'com.epam.deltix:value-types:0.9.3'
-            dependency 'com.epam.deltix:dfp:0.11.25'
+            dependency 'com.epam.deltix:dfp:0.12.5'
             dependency 'com.epam.deltix:thread-affinity:1.0.4'
             dependency 'com.epam.deltix:hd-date-time:0.2.11'
             dependency 'com.epam.deltix:containers:3.1.2'
 
-            dependencySet(group: 'com.epam.deltix', version: '6.0.63') {
+            dependencySet(group: 'com.epam.deltix', version: '6.0.65') {
                 entry 'timebase-collections'
                 entry 'timebase-messages'
                 entry 'timebase-lang'
@@ -158,7 +165,7 @@ configure(leafProjects) {
             dependency 'com.sun.codemodel:codemodel-project:2.6'
 
             dependency 'com.google.guava:guava:30.1.1-jre'
-            dependency 'com.google.code.gson:gson:2.2.4'
+            dependency 'com.google.code.gson:gson:2.8.9'
             dependency 'com.google.code.findbugs:jsr305:3.0.2'
             dependency 'com.google.code.findbugs:annotations:3.0.1'
 
@@ -236,7 +243,7 @@ configure(leafProjects) {
             dependency 'org.apache.commons:commons-compress:1.21'
             dependency 'org.apache.commons:commons-lang3:3.7'
             dependency 'org.apache.commons:commons-math3:3.6'
-            dependency 'org.apache.commons:commons-text:1.8'
+            dependency 'org.apache.commons:commons-text:1.10.0'
 
             dependencySet(group: 'org.apache.httpcomponents', version: '4.5.13') {
                 entry 'httpclient'
@@ -262,12 +269,12 @@ configure(leafProjects) {
 
             dependency 'org.objenesis:objenesis:2.2'
 
-            dependencySet(group: 'com.fasterxml.jackson.core', version: '2.13.2') {
+            dependencySet(group: 'com.fasterxml.jackson.core', version: '2.13.4') {
                 entry 'jackson-core'
                 entry 'jackson-annotations'
             }
-            dependency 'com.fasterxml.jackson.core:jackson-databind:2.13.2.2'
-            dependency 'com.fasterxml.jackson.dataformat:jackson-dataformat-cbor:2.13.2'
+            dependency 'com.fasterxml.jackson.core:jackson-databind:2.13.4'
+            dependency 'com.fasterxml.jackson.dataformat:jackson-dataformat-cbor:2.13.4'
 
             dependencySet(group: 'com.squareup.okhttp3', version: '3.3.1') {
                 entry 'okhttp'
@@ -301,8 +308,11 @@ configure(leafProjects) {
             dependency 'org.slf4j:slf4j-log4j12:1.7.10'
 
             dependency 'com.sun.xml.bind:jaxb-impl:2.3.0'
-
             dependency 'junit:junit:4.13.1'
+
+
+            dependency 'org.wildfly.openssl:wildfly-openssl:1.1.3.Final'
+            dependency 'org.wildfly.openssl:wildfly-openssl-java:1.1.3.Final'
             // End of version conflict resolution
         }
     }
